tests/expectations/compiler/constants/duplicate_global_constant_fail.out
Error [EAST0372017]: The name `MAX` is defined multiple times.
    --> compiler-test:2:7
     |
   1 |   const MAX: u32 = 100;
     |         ^^^ previous definition of `MAX` here
   2 |   const MAX: u32 = 200;
     |         ^^^ `MAX` redefined here
